--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
           <h3>Add your score</h3>
         </div>
         <form>
-          <input type="text" placeholder="Your name">
-          <input type="number" placeholder="Your score">
+          <input type="text" placeholder="Enter your name" required>
+          <input type="number" placeholder="Enter your score" required>
           <button type="submit" class="btn">submit</button>
         </form>
       </div>
